<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings.MainSetting_F">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"/>

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_back"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/setting_title"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_layout"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/top_layout"
                android:layout_marginTop="20dp"
                android:src="@drawable/profile_image_placeholder"/>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/photo_alert"
                android:textStyle="bold"
                android:text="@string/setting_title"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/user_image"
                android:layout_marginTop="10dp"/>

            <RelativeLayout
                android:id="@+id/purchase_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/like_back"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>

                <ImageView
                    android:id="@+id/like_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_like_num"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="80dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/like_icon"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:text="@string/purchase_title"
                        android:layout_marginLeft="20dp"/>

                    <TextView
                        android:id="@+id/purchase_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="12dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/purchase_state"
                        android:layout_marginLeft="20dp"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/show_layout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/show_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_setting_show"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/show_title"
                    android:gravity="center"
                    android:layout_toRightOf="@+id/show_icon"
                    android:layout_marginLeft="10dp"
                    android:textSize="16dp"
                    android:textColor="@color/text_gray"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_setting_arrow"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/filter_layout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/filter_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_setting_fillter"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/filter_title"
                    android:gravity="center"
                    android:layout_toRightOf="@+id/filter_icon"
                    android:layout_marginLeft="10dp"
                    android:textSize="16dp"
                    android:textColor="@color/text_gray"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_setting_arrow"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/notification_layout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/notification_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_notifications_black_24dp"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/notification_title"
                    android:gravity="center"
                    android:layout_toRightOf="@+id/notification_icon"
                    android:layout_marginLeft="10dp"
                    android:textSize="16dp"
                    android:textColor="@color/text_gray"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_setting_arrow"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/privacy_layout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/privacy_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_setting_privacy"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/privacy_title"
                    android:gravity="center"
                    android:layout_toRightOf="@+id/privacy_icon"
                    android:layout_marginLeft="10dp"
                    android:textSize="16dp"
                    android:textColor="@color/text_gray"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_setting_arrow"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/terms_layout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/terms_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_setting_terms"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/terms_title"
                    android:gravity="center"
                    android:layout_toRightOf="@+id/terms_icon"
                    android:layout_marginLeft="10dp"
                    android:textSize="16dp"
                    android:textColor="@color/text_gray"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_setting_arrow"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/restore_layout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/restore_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_setting_restore"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/restore_title"
                    android:gravity="center"
                    android:layout_toRightOf="@+id/restore_icon"
                    android:layout_marginLeft="10dp"
                    android:textSize="16dp"
                    android:textColor="@color/text_gray"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_setting_arrow"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/report_layout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/report_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_setting_support"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/report_title"
                    android:gravity="center"
                    android:layout_toRightOf="@+id/report_icon"
                    android:layout_marginLeft="10dp"
                    android:textSize="16dp"
                    android:textColor="@color/text_gray"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_setting_arrow"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/passport_layout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/passport_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_setting_passport"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/passport_title"
                    android:gravity="center"
                    android:layout_toRightOf="@+id/passport_icon"
                    android:layout_marginLeft="10dp"
                    android:textSize="16dp"
                    android:textColor="@color/text_gray"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_setting_arrow"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <ImageView
                android:id="@+id/twitter_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/twwitter_share_btn"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/delete_account_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/delete_account"
                android:textStyle="bold"/>

        </LinearLayout>

    </ScrollView>



</RelativeLayout>