<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Accounts.SMSCodeActivity">

    <RelativeLayout
        android:id="@+id/backBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/phoneNumTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_verify"
        android:textSize="40dp"
        android:textColor="@color/text_black"
        android:textStyle="bold"
        android:layout_below="@+id/backBtn"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_verify_intro"
        android:layout_below="@+id/phoneNumTxt"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/text_gray"
        android:textSize="16sp"/>

    <RelativeLayout
        android:id="@+id/phoneNumLayout"
        android:layout_width="310dp"
        android:layout_height="44dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backIcon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_point"/>

            <ImageView
                android:id="@+id/backIcon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_point"
                android:layout_marginLeft="15dp"/>

            <ImageView
                android:id="@+id/backIcon3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_point"
                android:layout_marginLeft="15dp"/>

            <ImageView
                android:id="@+id/backIcon4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_point"
                android:layout_marginLeft="15dp"/>

            <ImageView
                android:id="@+id/backIcon5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_point"
                android:layout_marginLeft="15dp"/>

            <ImageView
                android:id="@+id/backIcon6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_point"
                android:layout_marginLeft="15dp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/codeTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/text_code"
            android:maxLength="6"
            android:textSize="30sp"
            android:cursorVisible="false"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:ems="10"
            android:background="@color/transfer"
            android:inputType="number"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noSMSLayout"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_below="@+id/phoneNumLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <TextView
            android:id="@+id/noSMSTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_sms"
            android:textColor="@color/text_gray"
            android:textSize="14sp"
            android:gravity="center"/>

        <TextView
            android:layout_below="@+id/noSMSTxt"
            android:background="@color/text_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nextBtn"
        android:layout_below="@+id/noSMSLayout"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/next_btn_0"
        android:orientation="horizontal">

    </RelativeLayout>

</RelativeLayout>